--- a/index.html
+++ b/index.html
@@ -1,32 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Engineering Unit Converter</title>
-</head>
-<body style="font-family:Arial; text-align:center; padding:40px;">
-
-  <h1>Engineering Unit Converter</h1>
-
-  <p>
-    Click the button below to use the unit converter app.
-  </p>
-
-  <a href="https://ai.studio/apps/a65f84e8-f097-4f5e-933c-916a7145cff9"
-     target="_blank"
-     style="display:inline-block;
-            padding:15px 25px;
-            background:#007bff;
-            color:white;
-            text-decoration:none;
-            border-radius:8px;
-            font-size:18px;">
-     Open Unit Converter
-  </a>
-
-  <p style="margin-top:40px;">
-    Developed by <b>Thoeurn Sovanleap</b><br>
-    Chemical Engineering Student
-  </p>
-
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Google AI Studio App</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
+
